--- a/app.html
+++ b/app.html
@@ -19,7 +19,7 @@
     </main>
 
     <footer>
-        <p>© 2023 檔案分享網站. All rights reserved.</p>
+        <p>© 2023 V1安裝網站. All scripts by Eric970619.</p>
     </footer>
 
 
