--- a/app.html
+++ b/app.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="https://cdn.discordapp.com/attachments/1110906621091123311/1110934255007187045/x345453-WebClip230524-221528-fk5.mobileconfig">安裝一</a></li>
                 <li><a href="https://cdn.discordapp.com/attachments/1110906621091123311/1110934255007187045/x345453-WebClip230524-221528-fk5.mobileconfig">安裝二</a></li>
-                <li><a href="#">安裝三（維護中）</a></li>
+                <li><a href="https://discord.gg/5DjpZDeqXJ">進入DC群</a></li>
             </ul>
         </section>
     </main>
